--- a/index.html
+++ b/index.html
@@ -12,22 +12,23 @@
   </head>
   <body>
     <header class="header">
-      <div class="header__logo"><h2>Fiber</h2></div>
-      <nav class="header__nav">
-        <ul class="header__nav--links">
-          <li>Community</li>
-          <li>Pricing</li>
-          <li>Features</li>
-        </ul>
-        <ul class="header__nav--signing">
-          <li><button class="header__nav--signing__btn">Sign In</button></li>
-          <li><button class="header__nav--signing__btn-up"><a href="#">Sign Up</a></button></li>
-        </ul>
-      </nav>
-
-      <div class="header__ham">
-        <img src="./Assets/Hamburger Menu.svg" alt="">
-      </div>
+      <section class="header_container">
+        <div class="header__logo"><h2>Fiber</h2></div>
+        <nav class="header__nav">
+          <ul class="header__nav--links">
+            <li>Community</li>
+            <li>Pricing</li>
+            <li>Features</li>
+          </ul>
+          <ul class="header__nav--signing">
+            <li><button class="header__nav--signing__btn">Sign In</button></li>
+            <li><button class="header__nav--signing__btn-up"><a href="#">Sign Up</a></button></li>
+          </ul>
+        </nav>
+        <div class="header__ham">
+          <img src="./Assets/Hamburger Menu.svg" alt="">
+        </div>
+      </section>
     </header>
 
     <main>
