--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
         <div class="diversity">
           <div class="diversity__text">
-            <h2 class="diversity__text--h2">Diversity your portfolio.</h2>
+            <h2 class="diversity__text--h2">Diversify your portfolio.</h2>
             <p class="diversity__text--p">
               Create an even more impressive portfolio by creating case studies
               for your projects. Simply follow our step-by-step guide.
