--- a/index.html
+++ b/index.html
@@ -167,43 +167,49 @@
       </section>
     </main>
 
-    <footer>
-      <div class="fiber">
-        <h3>Fiber</h3>
-        <p>
-          With Fiber, you can setup your own personal portfolio in minutes with
-          dozens of premade, beautiful templates.
-        </p>
-        <p>Made with &hearts; in the Netherlands</p>
-      </div>
-      <div class="sitemap">
-        <ul>
-          <li>Homepage</li>
-          <li>Pricing</li>
-          <li>Testimonial</li>
-          <li>Features</li>
-        </ul>
-      </div>
-      <div class="resources">
-        <ul>
-          <li>Support</li>
-          <li>Contact</li>
-          <li>FAQ</li>
-        </ul>
-      </div>
-      <div class="company">
-        <ul>
-          <li>About</li>
-          <li>Customers</li>
-          <li>Blog</li>
-        </ul>
-      </div>
-      <div class="portfolios">
-        <ul>
-          <li>Sarah Andrews</li>
-          <li>Mathew Higgins</li>
-          <li>Janice Dave</li>
-        </ul>
+    <footer class="footer">
+      <div class="footer__container">
+        <div class="footer__fiber">
+          <h3 class="footer__heading">Fiber</h3>
+          <p>
+            With Fiber, you can setup your own personal portfolio in minutes with
+            dozens of premade, beautiful templates.
+          </p>
+          <p class="footer__fiber--gap">Made with &hearts; in the Netherlands</p>
+        </div>
+        <div class="footer__sitemap">
+          <h3 class="footer__heading">Sitemap</h3>
+          <ul class="footer__list">
+            <li class="footer__list--item">Homepage</li>
+            <li class="footer__list--item">Pricing</li>
+            <li class="footer__list--item">Testimonial</li>
+            <li class="footer__list--item">Features</li>
+          </ul>
+        </div>
+        <div class="footer__resources">
+          <h3 class="footer__heading">Resources</h3>
+          <ul class="footer__list">
+            <li class="footer__list--item">Support</li>
+            <li class="footer__list--item">Contact</li>
+            <li class="footer__list--item">FAQ</li>
+          </ul>
+        </div>
+        <div class="footer__company">
+          <h3 class="footer__heading">Company</h3>
+          <ul class="footer__list">
+            <li class="footer__list--item">About</li>
+            <li class="footer__list--item">Customers</li>
+            <li class="footer__list--item">Blog</li>
+          </ul>
+        </div>
+        <div class="footer__portfolios">
+          <h3 class="footer__heading">Portfolios</h3>
+          <ul class="footer__list">
+            <li class="footer__list--item">Sarah Andrews</li>
+            <li class="footer__list--item">Mathew Higgins</li>
+            <li class="footer__list--item">Janice Dave</li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
