sign up page HTML

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           </ul>
           <ul class="header__nav--signing">
             <li><button class="header__nav--signing__btn">Sign In</button></li>
-            <li><button class="header__nav--signing__btn-up"><a href="#">Sign Up</a></button></li>
+            <li><button class="header__nav--signing__btn-up"><a href="signUp.html">Sign Up</a></button></li>
           </ul>
         </nav>
         <div class="header__ham">
