--- a/index.html
+++ b/index.html
@@ -118,48 +118,54 @@
 
         <div class="testimonial">
           <div class="testimonial__box box--1">
-            <div class="testimonial__user">
-              <img src="./Assets/User Avatar.svg" class="testimonial__user--img"/>
-              <div class="testimonial__user--name">
-                <h5 class="testimonial__user--h5">Sarah Andrews</h5>
-                <p class="testimonial__user--para">$100k in revenue</p>
+            <div class="testimonial__text">
+              <div class="testimonial__user">
+                <img src="./Assets/User Avatar.svg" class="testimonial__user--img"/>
+                <div class="testimonial__user--name">
+                  <h5 class="testimonial__user--h5">Sarah Andrews</h5>
+                  <p class="testimonial__user--para">$100k in revenue</p>
+                </div>
               </div>
+              <p class="testimonial__para">
+                Setting up my portfolio with Fiber took no more than 10 minutes.
+                Since then, my portfolio has attracted a lot of clients and made
+                me more than $100k.
+              </p>
             </div>
-            <p class="testimonial__para">
-              Setting up my portfolio with Fiber took no more than 10 minutes.
-              Since then, my portfolio has attracted a lot of clients and made
-              me more than $100k.
-            </p>
             <button class="testimonial__btn">View Sarah's Portfolio</button>
           </div>
           
           <div class="testimonial__box box--2">
-            <div class="testimonial__user">
-              <img src="./Assets/User Avatar 2.svg" class="testimonial__user--img"/>
-              <div class="testimonial__user--name">
-                <h5 class="testimonial__user--h5">Mathew Higgins</h5>
-                <p class="testimonial__user--para">$20k in revenue</p>
+            <div class="testimonial__text">
+              <div class="testimonial__user">
+                <img src="./Assets/User Avatar 2.svg" class="testimonial__user--img"/>
+                <div class="testimonial__user--name">
+                  <h5 class="testimonial__user--h5">Mathew Higgins</h5>
+                  <p class="testimonial__user--para">$20k in revenue</p>
+                </div>
               </div>
+              <p class="testimonial__para">
+                I have been getting A LOT of leads ever since I used Fiber's
+                premade templates, now I just need to work on my case studies and
+                I'll be ready to go!
+              </p>
             </div>
-            <p class="testimonial__para">
-              I have been getting A LOT of leads ever since I used Fiber's
-              premade templates, now I just need to work on my case studies and
-              I'll be ready to go!
-            </p>
             <button class="testimonial__btn">View Mathew's Portfolio</button>
           </div>
           <div class="testimonial__box box--3">
-            <div class="testimonial__user">
-              <img src="./Assets/User Avatar 32.svg"  class="testimonial__user--img"/>
-              <div class="testimonial__user--name">
-                <h5 class="testimonial__user--h5">Janice Dave</h5>
-                <p class="testimonial__user--para">$30k in revenue</p>
+            <div class="testimonial__text">
+              <div class="testimonial__user">
+                <img src="./Assets/User Avatar 32.svg"  class="testimonial__user--img"/>
+                <div class="testimonial__user--name">
+                  <h5 class="testimonial__user--h5">Janice Dave</h5>
+                  <p class="testimonial__user--para">$30k in revenue</p>
+                </div>
               </div>
+              <p class="testimonial__para">
+                I only just started freelancing this year have already made more
+                than I ever in my full-time job. The templates are so amazing
+              </p>
             </div>
-            <p class="testimonial__para">
-              I only just started freelancing this year have already made more
-              than I ever in my full-time job. The templates are so amazing
-            </p>
             <button class="testimonial__btn">View Janice's Portfolio</button>
           </div>
         </div>
