--- a/signUp.html
+++ b/signUp.html
@@ -27,7 +27,8 @@
                 </div>
                 <div class="sign__form--group group--3">
                     <label for="password">Password</label>
-                    <input type="password" name="password" class="sign__form--input password" required placeholder="At least 8 characters">
+                    <input type="password" name="password" class="sign__form--input password" id="password" required placeholder="At least 8 characters">
+                    <img src="/Assets/hide password.svg" id="togglePassword" class="password--img" alt="">
                 </div>
 
                 <div class="sign__form--info">
@@ -41,7 +42,7 @@
                 <button type="submit" class="sign__form--btn">Create Fiber Account</button>
             </form>
             <div class="sign__text--log">
-                <p class="sign__text--log-para">Already have an account?<a href="#" class="sign__text--log-link">Sign in</a>
+                <p class="sign__text--log-para">Already have an account?<a href="index.html" class="sign__text--log-link">Sign in</a>
                 </p>
             </div>
         </div>
@@ -56,5 +57,19 @@
             </p>
         </div>
     </section>
+
+
+    <script defer>
+        const togglePassword = document.querySelector('#togglePassword');
+        const password = document.querySelector('#password');
+
+        togglePassword.addEventListener('click', function (e) {
+            // toggle the type attribute
+            const type = password.getAttribute('type') === 'password' ? 'text' : 'password';
+            password.setAttribute('type', type);
+            // toggle the eye slash icon
+            this.classList.toggle('fa-eye-slash');
+        });
+    </script>
 </body>
 </html>
