--- a/signUp.html
+++ b/signUp.html
@@ -67,8 +67,7 @@
             // toggle the type attribute
             const type = password.getAttribute('type') === 'password' ? 'text' : 'password';
             password.setAttribute('type', type);
-            // toggle the eye slash icon
-            this.classList.toggle('fa-eye-slash');
+            // toggle the eye 
         });
     </script>
 </body>
