--- a/signUp.html
+++ b/signUp.html
@@ -55,6 +55,13 @@
             <p class="sign__img--para">
                 Crafted by a team of professional designers, our templates are eunparalleled in the market.
             </p>
+
+            <div class="sign__small-boxes">
+                <div class="sign__small-box box--1"></div>
+                <div class="sign__small-box box--2"></div>
+                <div class="sign__small-box box--3"></div>
+                <div class="sign__small-box box--4"></div>
+            </div>
         </div>
     </section>
 
