--- a/signUp.html
+++ b/signUp.html
@@ -59,7 +59,7 @@
     </section>
 
 
-    <script defer>
+    <script>
         const togglePassword = document.querySelector('#togglePassword');
         const password = document.querySelector('#password');
 
