image box styling

--- a/signUp.html
+++ b/signUp.html
@@ -33,10 +33,10 @@
 
                 <div class="sign__form--info">
                     <input type="checkbox" name="check" class="sign__form--info-check" id="checkme">
-                    <p class="sign__form--info-para">
+                    <label class="sign__form--info-para">
                         By creating an account on FIber, you agree to the
                         <a href="#" class="sign__form--info-link">Terms & Conditions.</a>
-                    </p>
+                    </label>
                 </div>
 
                 <button type="submit" class="sign__form--btn">Create Fiber Account</button>
@@ -49,9 +49,9 @@
 
         <div class="sign__img-box">
             <img src="/Assets/Sign Up Image.png" alt="" class="sign__img">
-            <h3 class="sign__img--heading">
+            <h2 class="sign__img--heading">
                 Unparalled Templates
-            </h3>
+            </h2>
             <p class="sign__img--para">
                 Crafted by a team of professional designers, our templates are eunparalleled in the market.
             </p>
