--- a/signUp.html
+++ b/signUp.html
@@ -91,10 +91,12 @@
           Crafted by a team of professional designers, our templates are
           eunparalleled in the market.
         </p>
-        <span class="highlighted"></span>
-        <span></span>
-        <span></span>
-        <span></span>
+        <div class="identifiers">
+            <span class="highlighted"></span>
+            <span class="faded-highlight"></span>
+            <span class="faded-highlight"></span>
+            <span class="faded-highlight"></span>
+        </div>
       </div>
     </section>
 
